@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-22T01:42:50Z",
+  "timestamp" : "2022-11-22T08:25:46Z",
   "count_outdated" : 2611,
   "uniques_outdated" : 702,
-  "count" : 2644,
-  "uniques" : 719,
+  "count" : 2645,
+  "uniques" : 720,
   "clones" : [
     {
       "timestamp": "2022-11-09T00:00:00Z",
@@ -79,6 +79,13 @@
       "timestamp": "2022-11-21T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
