@@ -1,5 +1,5 @@
 {
-  "count": 33,
+  "count": 34,
   "uniques": 9,
   "clones": [
     {
@@ -55,6 +55,11 @@
     {
       "timestamp": "2022-11-21T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-22T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
